privacy policy to be updated

--- a/login/passwordconfirm.html
+++ b/login/passwordconfirm.html
@@ -49,6 +49,16 @@
             background-color: #5c3a0d;
             border-color: #5c3a0d;
         }
+        .btn-outline-primary {
+            border-color: #7b4d11;
+            color: #7b4d11;
+            border-radius: 0;
+            font-weight: bold;
+        }
+        .btn-outline-primary:hover {
+            background-color: #7b4d11;
+            color: white;
+        }
         .error-message {
             font-size: 0.8rem;
             color: red;
@@ -84,8 +94,8 @@
             </div>
             <h6 class="card-title mb-4 text-center">Reset Your Password</h6>
             <form id="resetPasswordForm">
-                <input type="hidden" name="uidb64" value="{{ uidb64 }}">
-                <input type="hidden" name="token" value="{{ token }}">
+                <input type="hidden" name="uidb64" id="uidb64">
+                <input type="hidden" name="token" id="token">
                 <div class="mb-3">
                     <label for="new_password" class="form-label" style="font-weight: bold;">New Password</label>
                     <input type="password" class="form-control form-control-underline" id="new_password" name="new_password" placeholder="Enter new password" required>
@@ -162,6 +172,15 @@
             return errors;
         }
 
+        // Extract uidb64 and token from URL query parameters
+        function getQueryParams() {
+            const params = new URLSearchParams(window.location.search);
+            return {
+                uidb64: params.get('uidb64'),
+                token: params.get('token')
+            };
+        }
+
         // Real-time password validation
         const newPasswordInput = document.getElementById('new_password');
         newPasswordInput.addEventListener('input', debounce(function () {
@@ -214,11 +233,23 @@
             }
         }
 
+        // Initialize form with query parameters
+        document.addEventListener('DOMContentLoaded', () => {
+            const { uidb64, token } = getQueryParams();
+            if (!uidb64 || !token) {
+                showAlert('errorAlert', 'Invalid or missing reset link parameters.');
+                return;
+            }
+
+            document.getElementById('uidb64').value = uidb64;
+            document.getElementById('token').value = token;
+        });
+
         // Form submission
         document.getElementById('resetPasswordForm').addEventListener('submit', async function (event) {
             event.preventDefault();
-            const uidb64 = document.querySelector('input[name="uidb64"]').value;
-            const token = document.querySelector('input[name="token"]').value;
+            const uidb64 = document.getElementById('uidb64').value;
+            const token = document.getElementById('token').value;
             const newPassword = newPasswordInput.value;
             const confirmPassword = confirmPasswordInput.value;
             const submitButton = this.querySelector('button[type="submit"]');
@@ -250,7 +281,7 @@
                 showAlert('successAlert');
             } catch (error) {
                 console.error('Password reset failed:', error.response ? error.response.data : error.message);
-                const errorMessage = error.response?.data?.errors || error.response?.data?.error || 'Failed to reset password. The link may be invalid or expired.';
+                const errorMessage = error.response?.data?.error || 'Failed to reset password. The link may be invalid or expired.';
                 showAlert('errorAlert', errorMessage);
             } finally {
                 submitButton.disabled = false;
