--- a/login/login.html
+++ b/login/login.html
@@ -160,10 +160,13 @@
 
         <div class="d-flex align-items-center justify-content-center mt-4" style="font-size: 0.9rem;">
           <p>New to FLIPS? <a href="register.html">Create an account</a></p>
-      </div>
-      <div class="d-flex align-items-center justify-content-center mt-2" style="font-size: 0.9rem;">
+        </div>
+        <div class="d-flex align-items-center justify-content-center mt-2" style="font-size: 0.9rem;">
           <p><a href="password-reset.html">Forgot Password?</a></p>
-      </div>
+        </div>
+        <div class="d-flex align-items-center justify-content-center mt-2" style="font-size: 0.9rem;">
+          <p><a href="privacy_policy.html">Privacy Policy</a></p>
+        </div>
       </div>
     </div>
   </div>
@@ -332,10 +335,28 @@
             token: response.data.token
           });
           localStorage.setItem("token", response.data.token);
-          showAlert('successAlert');
-          setTimeout(() => {
-            window.location.href = "../dashboard/index.html";
-          }, 2000);
+          
+          // Check privacy policy acceptance
+          axios.get(`${BASE_URL}/userprofile/`, {
+            headers: { 'Authorization': `Bearer ${response.data.token}` }
+          })
+            .then(profileResponse => {
+              if (!profileResponse.data.privacy_policy_accepted) {
+                showAlert('successAlert');
+                setTimeout(() => {
+                  window.location.href = "privacy.html";
+                }, 2000);
+              } else {
+                showAlert('successAlert');
+                setTimeout(() => {
+                  window.location.href = "../dashboard/index.html";
+                }, 2000);
+              }
+            })
+            .catch(error => {
+              console.error('Failed to fetch profile:', error.response ? error.response.data : error.message);
+              showAlert('serverErrorAlert');
+            });
         })
         .catch(function (error) {
           if (error.response) {
