--- a/login/privacy.html
+++ b/login/privacy.html
@@ -176,97 +176,90 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script>
-       const BASE_URL = 'https://api.flipsintel.org';
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script>
+    const BASE_URL = 'https://api.flipsintel.org';
 
-// Get CSRF token from cookies
-function getCookie(name) {
-    let cookieValue = null;
-    if (document.cookie && document.cookie !== '') {
-        const cookies = document.cookie.split(';');
-        for (let i = 0; i < cookies.length; i++) {
-            const cookie = cookies[i].trim();
-            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                break;
-            }
+    function showAlert(alertId, message) {
+        const alerts = ['successAlert', 'errorAlert', 'authAlert'];
+        alerts.forEach(id => {
+            const alert = document.getElementById(id);
+            alert.classList.add('d-none');
+            alert.classList.remove('show');
+        });
+
+        const targetAlert = document.getElementById(alertId);
+        if (message) {
+            targetAlert.querySelector('strong').nextSibling.textContent = ` ${message}`;
+        }
+        targetAlert.classList.remove('d-none');
+        targetAlert.classList.add('show');
+        if (alertId === 'successAlert') {
+            setTimeout(() => {
+                window.location.href = '../dashboard/index.html';
+            }, 2000);
+        } else if (alertId === 'authAlert') {
+            setTimeout(() => {
+                window.location.href = 'login.html';
+            }, 2000);
+        } else {
+            setTimeout(() => {
+                targetAlert.classList.remove('show');
+                setTimeout(() => targetAlert.classList.add('d-none'), 150);
+            }, 5000);
         }
     }
-    return cookieValue;
-}
 
-// Show alert
-function showAlert(alertId, message) {
-    const alerts = ['successAlert', 'errorAlert', 'authAlert'];
-    alerts.forEach(id => {
-        const alert = document.getElementById(id);
-        alert.classList.add('d-none');
-        alert.classList.remove('show');
+    document.addEventListener('DOMContentLoaded', async () => {
+        const token = localStorage.getItem('token');
+        console.log('Token on page load:', token);
+        if (!token) {
+            showAlert('authAlert', 'Please log in to accept the privacy policy.');
+            return;
+        }
+
+        try {
+            const response = await axios.get(`${BASE_URL}/userprofile/`, {
+                headers: { 'Authorization': `Bearer ${token}` }
+            });
+            console.log('User profile:', response.data);
+            if (response.data.has_accepted_privacy_policy) {
+                console.log('Privacy policy already accepted, redirecting to dashboard');
+                window.location.href = '../dashboard/index.html';
+            }
+        } catch (error) {
+            console.error('Profile fetch failed:', error.response?.data || error.message);
+            showAlert('authAlert', 'Invalid session. Please log in again.');
+            localStorage.removeItem('token');
+        }
     });
 
-    const targetAlert = document.getElementById(alertId);
-    if (message) {
-        targetAlert.querySelector('strong').nextSibling.textContent = ` ${message}`;
-    }
-    targetAlert.classList.remove('d-none');
-    targetAlert.classList.add('show');
-    if (alertId === 'successAlert') {
-        setTimeout(() => {
-            window.location.href = '../dashboard/index.html';
-        }, 2000);
-    } else if (alertId === 'authAlert') {
-        setTimeout(() => {
-            window.location.href = 'login.html';
-        }, 2000);
-    } else {
-        setTimeout(() => {
-            targetAlert.classList.remove('show');
-            setTimeout(() => targetAlert.classList.add('d-none'), 150);
-        }, 5000);
-    }
-}
+    document.getElementById('acceptPolicyBtn').addEventListener('click', async function () {
+        const token = localStorage.getItem('token');
+        console.log('Retrieved token:', token);
+        if (!token) {
+            showAlert('authAlert', 'Please log in to accept the privacy policy.');
+            return;
+        }
 
-// Check token on page load
-document.addEventListener('DOMContentLoaded', () => {
-    const token = localStorage.getItem('token');
-    console.log('Token on page load:', token);
-    if (!token) {
-        showAlert('authAlert', 'Please log in to accept the privacy policy.');
-    }
-});
+        this.disabled = true;
+        this.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Accepting...';
 
-// Handle Accept button click
-document.getElementById('acceptPolicyBtn').addEventListener('click', async function () {
-    const token = localStorage.getItem('token');
-    console.log('Retrieved token:', token);
-    if (!token) {
-        showAlert('authAlert', 'Please log in to accept the privacy policy.');
-        return;
-    }
-
-    this.disabled = true;
-    this.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Accepting...';
-
-    const headers = {
-        'Authorization': `Bearer ${token}`,
-        'X-CSRFToken': getCookie('csrftoken')
-    };
-    console.log('Request headers:', headers);
-
-    try {
-        const response = await axios.post(`${BASE_URL}/userprofile/accept-privacy-policy/`, {}, { headers });
-        console.log('Privacy policy accepted:', response.data);
-        showAlert('successAlert');
-    } catch (error) {
-        console.error('Failed to accept privacy policy:', error.response ? error.response.data : error.message);
-        const errorMessage = error.response?.data?.error || 'Failed to accept privacy policy. Please try again.';
-        showAlert('errorAlert', errorMessage);
-    } finally {
-        this.disabled = false;
-        this.innerHTML = 'Accept Privacy Policy';
-    }
-});
-    </script>
+        try {
+            const response = await axios.post(`${BASE_URL}/userprofile/accept-privacy-policy/`, {}, {
+                headers: { 'Authorization': `Bearer ${token}` }
+            });
+            console.log('Privacy policy accepted:', response.data);
+            showAlert('successAlert');
+        } catch (error) {
+            console.error('Failed to accept privacy policy:', error.response?.data || error.message);
+            const errorMessage = error.response?.data?.error || 'Failed to accept privacy policy. Please try again.';
+            showAlert('errorAlert', errorMessage);
+        } finally {
+            this.disabled = false;
+            this.innerHTML = 'Accept Privacy Policy';
+        }
+    });
+</script>
 </body>
 </html>
