--- a/login/register.html
+++ b/login/register.html
@@ -454,7 +454,7 @@
           localStorage.setItem('redirectAfterPrivacy', 'login.html');
           showAlert('successAlert');
           setTimeout(() => {
-            window.location.href = 'privacy_policy.html';
+            window.location.href = 'privacy.html';
           }, 2000);
         },
         error: function (xhr) {
