--- a/login/login.html
+++ b/login/login.html
@@ -7,8 +7,105 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
     <style>
-        /* Styles remain unchanged */
-    </style>
+  body {
+      background: linear-gradient(135deg, #f0f2f8, #e6e9f0);
+      font-family: Candara;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      position: relative;
+    }
+    .card {
+      width: 100%;
+      max-width: 400px;
+      border-radius: 0;
+      z-index: 2;
+    }
+    .card-title {
+      font-weight: bold;
+    }
+    .form-control-underline {
+      border: none;
+      border-bottom: 1px solid #ccc;
+      border-radius: 0;
+      box-shadow: none;
+    }
+    .form-control-underline:focus {
+      border-bottom: 2px solid #7b4d11;
+      outline: none;
+      box-shadow: none;
+    }
+    #usernameInput::placeholder {
+      font-size: 0.85rem;
+    }
+    .next-btn, .sign-btn {
+      border-radius: 0;
+      border: none;
+      outline: none;
+      color: white;
+      font-weight: bold;
+      background-color: #7b4d11;
+    }
+    .next-btn:focus, .sign-btn:focus {
+      background-color: #7b4d11;
+    }
+    .next-btn:hover, .sign-btn:hover {
+      background-color: #7b4d11;
+      color: white;
+    }
+    .spinner-dots {
+      display: flex;
+      justify-content: center;
+      gap: 6px;
+    }
+    .spinner-dots div {
+      width: 10px;
+      height: 10px;
+      background-color: #0078d4;
+      border-radius: 50%;
+      animation: bounce 1s infinite ease-in-out;
+    }
+    .spinner-dots div:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+    .spinner-dots div:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+    @keyframes bounce {
+      0%, 80%, 100% { transform: scale(0); }
+      40% { transform: scale(1); }
+    }
+    .backBtn {
+      color: #7b4d11;
+      cursor: pointer;
+    }
+    .link-small {
+      font-size: 0.9rem;
+    }
+    .error-message {
+      font-size: 0.8rem;
+      color: red;
+    }
+    .alert-container {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1000;
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+    }
+    .alert {
+      margin-bottom: 10px;
+      border-radius: 0;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    .alert-success, .alert-warning, .alert-danger, .alert-dark {
+      font-size: 0.9rem;
+    }    </style>
 </head>
 <body>
     <video autoplay muted loop playsinline
