update privacy policy

--- a/login/login.html
+++ b/login/login.html
@@ -326,7 +326,7 @@
                     showAlert('successAlert');
                     setTimeout(() => {
                         if (response.data.needs_privacy_policy) {
-                            window.location.href = "privacy_policy.html";
+                            window.location.href = "privacy.html";
                         } else {
                             window.location.href = "../dashboard/index.html";
                         }
