--- a/login/privacy.html
+++ b/login/privacy.html
@@ -63,7 +63,7 @@
             border-radius: 0;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-        h2, h3 {
+        h2, h3, h4 {
             color: #7b4d11;
         }
         p, li {
@@ -91,9 +91,66 @@
             <h6 class="card-title mb-4 text-center">FLIPS Privacy Policy</h6>
             <div class="policy-content" role="region" aria-labelledby="privacy-policy-heading">
                 <h2 id="privacy-policy-heading">Privacy Policy</h2>
-                <p><strong>Last Updated: May 13, 2025</strong></p>
-                <p>At FLIPS, we are committed to protecting your privacy and ensuring the security of your personal information. This Privacy Policy explains how we collect, use, share, and protect your data when you use our platform and services.</p>
-                <!-- Rest of the privacy policy content remains unchanged -->
+                <p><strong>Effective Date: May 13, 2025</strong></p>
+                <p>FLIPS ORG (“we,” “us,” or “our”) is an early warning and flood monitoring service for Kenya and international communities. This Privacy Policy explains how we collect, use, and share your personal information. It applies to data you provide when you register for Flips Org, use our app or website, or receive alerts and notifications.</p>
+
+                <h3>Data We Collect</h3>
+                <p>We collect only the information needed to provide flood alerts and related services. This includes:</p>
+                <ul>
+                    <li><strong>Contact info:</strong> Your name, email address, and phone number (if you provide them).</li>
+                    <li><strong>Location:</strong> Your geographical location (e.g., GPS coordinates or region) when you consent, so we can send alerts relevant to where you are.</li>
+                    <li><strong>Device and usage data:</strong> Information about your mobile device or web browser, such as device type, operating system, IP address, and in-app usage patterns.</li>
+                </ul>
+                <p>All data collection is done lawfully and transparently, with your consent where required by law.</p>
+
+                <h3>How We Use Your Data</h3>
+                <p>We use your information to operate and improve our service. Specifically, we use data to:</p>
+                <ul>
+                    <li>Provide and maintain your account, verify your identity, and ensure secure access. Your contact info allows us to send account notifications and support messages.</li>
+                    <li>Send flood alerts and safety notifications. When you enable location-based alerts, we transmit your selected region or GPS data to tailor timely warnings to your area.</li>
+                    <li>Personalize and improve service. We may use usage data to analyze how the service is working, fix bugs, and optimize performance. For example, app analytics can help us understand which regions receive alerts most often and improve our forecasting models.</li>
+                </ul>
+                <p>Your information will only be used for these legitimate purposes and related disaster management activities.</p>
+
+                <h3>Data Sharing and Disclosure</h3>
+                <p>FLIPS ORG shares information only as needed to support disaster response and claims processing, and as required by law. We do not sell your personal data. We may share data in the following ways:</p>
+                <ul>
+                    <li><strong>Emergency and government partners:</strong> We work with government agencies and emergency responders to coordinate flood warnings and relief efforts. In critical situations, anonymized or aggregated alert data may be shared to help manage the disaster response.</li>
+                    <li><strong>Insurance and aid organizations:</strong> To help with insurance claims or emergency aid, FLIPS ORG may provide necessary data (such as alert timestamps or locations) to insurers or humanitarian groups.</li>
+                    <li><strong>Service providers:</strong> We use trusted third-party vendors (messaging platforms, cloud hosts, analytics services) to deliver notifications and run our system. These partners only handle data needed to perform their service for us.</li>
+                    <li><strong>Legal requirements:</strong> We will share personal information if required by law, subpoena, or court order, or to protect safety (e.g., to prevent fraud or in response to legal requests).</li>
+                </ul>
+                <p>Before any international or cross-border transfer, we ensure safeguards are in place. Under Kenya’s Data Protection Act (2019), personal data can only be sent abroad if adequate protections are used or you consent.</p>
+
+                <h3>Cookies and Location Data</h3>
+                <p>We use cookies and similar tracking technologies on our website and app to improve your experience. Cookies are small files placed on your device that remember your preferences and settings. For example, cookies can store your chosen region or enable faster logins. Tracking cookies often store information such as geographic location and device details. This helps us deliver location-specific flood updates and personalize content. You can manage or disable cookies in your browser or device settings; however, disabling cookies may affect some features (like staying logged in or receiving precise alerts).</p>
+
+                <h3>Data Security and Retention</h3>
+                <p>We are committed to protecting your data. FLIPS ORG implements industry-standard security measures (such as encryption and secure servers) to safeguard your information. However, no system is 100% secure. We use “commercially acceptable means to protect Your Personal Data” but cannot guarantee absolute security. We recommend you also protect your account credentials and notify us if you suspect unauthorized access.</p>
+                <p>We retain your personal data only as long as necessary for its purpose. If you close your FLIPS ORG account or withdraw consent, we will delete your information. We may retain some data (in anonymized form) for analytics or legal compliance, but personal details will be removed.</p>
+
+                <h3>International Users and Cross-Border Transfers</h3>
+                <p>FLIPS ORG is accessible globally. When you use our service outside Kenya, or if we transfer data between countries, we comply with applicable laws. In particular, the Kenya Data Protection Act requires adequate safeguards for international transfers. We will either seek your consent for transfers or ensure that recipient countries have strong privacy protections. Your data may be stored or processed on secure servers in multiple jurisdictions, but it will always be handled under this Privacy Policy and relevant data protection laws.</p>
+
+                <h3>Your Rights</h3>
+                <p>Under data protection laws (including Kenya’s Data Protection Act and similar international laws), you have rights regarding your personal information. These include the right to:</p>
+                <ul>
+                    <li>Access the data we hold about you.</li>
+                    <li>Correct or update your information if it is inaccurate or incomplete.</li>
+                    <li>Delete your personal data or ask us to erase it (for example, if you close your account).</li>
+                    <li>Withdraw consent to processing (for instance, opt out of location tracking or push notifications).</li>
+                    <li>Restrict or object to how we use your data (for example, for marketing, which we do not do).</li>
+                </ul>
+                <p>If you wish to exercise any of these rights, you can do so within the app or by contacting us. We will respond promptly, as required by law.</p>
+
+                <h3>Changes to This Privacy Policy</h3>
+                <p>We may update this Privacy Policy from time to time. If we make material changes, we will post the revised policy on our website or app and update the “Effective Date” at the top. We will notify you of significant changes (for example, by email or an in-app notification) and recommend you review the policy whenever you use our service. Your continued use of FLIPS ORG after such changes indicates your acceptance of the new policy.</p>
+
+                <h3>Contact Us</h3>
+                <p>If you have questions about this Privacy Policy or our data practices, you can contact FLIPS ORG at our support email <a href="mailto:info.flipsintelligence@gmail.com">info.flipsintelligence@gmail.com</a> or by other contact methods provided in the app.</p>
+
+                <h3>Terms of Service</h3>
+                <p>For our full Terms of Service, please visit <a href="terms.html">our Terms of Service page</a>.</p>
             </div>
             <button class="btn btn-primary w-100 mt-4" id="acceptPolicyBtn">Accept Privacy Policy</button>
             <a href="login.html" class="btn btn-outline-primary w-100 mt-3">Back to Login</a>
@@ -113,6 +170,10 @@
             <strong>Login Required!</strong> Please log in to accept the privacy policy.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
+        <div class="alert alert-info alert-dismissible fade d-none" id="verifyEmailAlert" role="alert">
+            <strong>Please Verify Your Email!</strong> Verify your email to proceed.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -121,7 +182,7 @@
         const BASE_URL = 'https://api.flipsintel.org';
 
         function showAlert(alertId, message) {
-            const alerts = ['successAlert', 'errorAlert', 'authAlert'];
+            const alerts = ['successAlert', 'errorAlert', 'authAlert', 'verifyEmailAlert'];
             alerts.forEach(id => {
                 const alert = document.getElementById(id);
                 alert.classList.add('d-none');
@@ -136,12 +197,12 @@
             targetAlert.classList.add('show');
             if (alertId === 'successAlert') {
                 setTimeout(() => {
-                    const redirectUrl = localStorage.getItem('redirectAfterPrivacy') || '../dashboard/index.html';
+                    const redirectUrl = sessionStorage.getItem('redirectAfterPrivacy') || '../dashboard/index.html';
                     window.location.href = redirectUrl;
                 }, 2000);
-            } else if (alertId === 'authAlert') {
+            } else if (alertId === 'authAlert' || alertId === 'verifyEmailAlert') {
                 setTimeout(() => {
-                    window.location.href = 'login.html';
+                    window.location.href = alertId === 'verifyEmailAlert' ? 'verify-email.html' : 'login.html';
                 }, 2000);
             } else {
                 setTimeout(() => {
@@ -152,35 +213,50 @@
         }
 
         document.addEventListener('DOMContentLoaded', async () => {
-            const token = localStorage.getItem('token');
-            console.log('Token on page load:', token);
+            const token = sessionStorage.getItem('token');
+            const isVerified = sessionStorage.getItem('is_verified') === 'true';
+            const email = sessionStorage.getItem('email');
+            console.log('Session data on page load:', { token, isVerified, email });
+
             if (!token) {
                 showAlert('authAlert', 'Please log in to accept the privacy policy.');
                 return;
             }
 
+            if (!isVerified) {
+                showAlert('verifyEmailAlert', 'Please verify your email to accept the privacy policy.');
+                return;
+            }
+
             try {
                 const response = await axios.get(`${BASE_URL}/userprofile/`, {
-                    headers: { 'Authorization': `Bearer ${token}` }
+                    headers: { 'Authorization': `Token ${token}` }
                 });
                 console.log('User profile:', response.data);
                 if (response.data.has_accepted_privacy_policy) {
                     console.log('Privacy policy already accepted, redirecting to dashboard');
-                    const redirectUrl = localStorage.getItem('redirectAfterPrivacy') || '../dashboard/index.html';
+                    const redirectUrl = sessionStorage.getItem('redirectAfterPrivacy') || '../dashboard/index.html';
                     window.location.href = redirectUrl;
                 }
             } catch (error) {
                 console.error('Profile fetch failed:', error.response?.data || error.message);
                 showAlert('authAlert', 'Invalid session. Please log in again.');
-                localStorage.removeItem('token');
+                sessionStorage.clear();
             }
         });
 
         document.getElementById('acceptPolicyBtn').addEventListener('click', async function () {
-            const token = localStorage.getItem('token');
-            console.log('Retrieved token:', token);
+            const token = sessionStorage.getItem('token');
+            const isVerified = sessionStorage.getItem('is_verified') === 'true';
+            console.log('Retrieved session data:', { token, isVerified });
+
             if (!token) {
                 showAlert('authAlert', 'Please log in to accept the privacy policy.');
+                return;
+            }
+
+            if (!isVerified) {
+                showAlert('verifyEmailAlert', 'Please verify your email to accept the privacy policy.');
                 return;
             }
 
@@ -189,10 +265,10 @@
 
             try {
                 const response = await axios.post(`${BASE_URL}/userprofile/accept-privacy-policy/`, {}, {
-                    headers: { 'Authorization': `Bearer ${token}` }
+                    headers: { 'Authorization': `Token ${token}` }
                 });
                 console.log('Privacy policy accepted:', response.data);
-                showAlert('successAlert');
+                showAlert('successAlert', 'Privacy policy accepted successfully.');
             } catch (error) {
                 console.error('Failed to accept privacy policy:', error.response?.data || error.message);
                 const errorMessage = error.response?.data?.error || 'Failed to accept privacy policy. Please try again.';
