--- a/login/login.html
+++ b/login/login.html
@@ -7,105 +7,106 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
     <style>
-  body {
-      background: linear-gradient(135deg, #f0f2f8, #e6e9f0);
-      font-family: Candara;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      position: relative;
-    }
-    .card {
-      width: 100%;
-      max-width: 400px;
-      border-radius: 0;
-      z-index: 2;
-    }
-    .card-title {
-      font-weight: bold;
-    }
-    .form-control-underline {
-      border: none;
-      border-bottom: 1px solid #ccc;
-      border-radius: 0;
-      box-shadow: none;
-    }
-    .form-control-underline:focus {
-      border-bottom: 2px solid #7b4d11;
-      outline: none;
-      box-shadow: none;
-    }
-    #usernameInput::placeholder {
-      font-size: 0.85rem;
-    }
-    .next-btn, .sign-btn {
-      border-radius: 0;
-      border: none;
-      outline: none;
-      color: white;
-      font-weight: bold;
-      background-color: #7b4d11;
-    }
-    .next-btn:focus, .sign-btn:focus {
-      background-color: #7b4d11;
-    }
-    .next-btn:hover, .sign-btn:hover {
-      background-color: #7b4d11;
-      color: white;
-    }
-    .spinner-dots {
-      display: flex;
-      justify-content: center;
-      gap: 6px;
-    }
-    .spinner-dots div {
-      width: 10px;
-      height: 10px;
-      background-color: #0078d4;
-      border-radius: 50%;
-      animation: bounce 1s infinite ease-in-out;
-    }
-    .spinner-dots div:nth-child(2) {
-      animation-delay: 0.2s;
-    }
-    .spinner-dots div:nth-child(3) {
-      animation-delay: 0.4s;
-    }
-    @keyframes bounce {
-      0%, 80%, 100% { transform: scale(0); }
-      40% { transform: scale(1); }
-    }
-    .backBtn {
-      color: #7b4d11;
-      cursor: pointer;
-    }
-    .link-small {
-      font-size: 0.9rem;
-    }
-    .error-message {
-      font-size: 0.8rem;
-      color: red;
-    }
-    .alert-container {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 1000;
-      width: 100%;
-      max-width: 400px;
-      text-align: center;
-    }
-    .alert {
-      margin-bottom: 10px;
-      border-radius: 0;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-    .alert-success, .alert-warning, .alert-danger, .alert-dark {
-      font-size: 0.9rem;
-    }    </style>
+        body {
+            background: linear-gradient(135deg, #f0f2f8, #e6e9f0);
+            font-family: Candara;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            position: relative;
+        }
+        .card {
+            width: 100%;
+            max-width: 400px;
+            border-radius: 0;
+            z-index: 2;
+        }
+        .card-title {
+            font-weight: bold;
+        }
+        .form-control-underline {
+            border: none;
+            border-bottom: 1px solid #ccc;
+            border-radius: 0;
+            box-shadow: none;
+        }
+        .form-control-underline:focus {
+            border-bottom: 2px solid #7b4d11;
+            outline: none;
+            box-shadow: none;
+        }
+        #usernameInput::placeholder {
+            font-size: 0.85rem;
+        }
+        .next-btn, .sign-btn {
+            border-radius: 0;
+            border: none;
+            outline: none;
+            color: white;
+            font-weight: bold;
+            background-color: #7b4d11;
+        }
+        .next-btn:focus, .sign-btn:focus {
+            background-color: #7b4d11;
+        }
+        .next-btn:hover, .sign-btn:hover {
+            background-color: #7b4d11;
+            color: white;
+        }
+        .spinner-dots {
+            display: flex;
+            justify-content: center;
+            gap: 6px;
+        }
+        .spinner-dots div {
+            width: 10px;
+            height: 10px;
+            background-color: #0078d4;
+            border-radius: 50%;
+            animation: bounce 1s infinite ease-in-out;
+        }
+        .spinner-dots div:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+        .spinner-dots div:nth-child(3) {
+            animation-delay: 0.4s;
+        }
+        @keyframes bounce {
+            0%, 80%, 100% { transform: scale(0); }
+            40% { transform: scale(1); }
+        }
+        .backBtn {
+            color: #7b4d11;
+            cursor: pointer;
+        }
+        .link-small {
+            font-size: 0.9rem;
+        }
+        .error-message {
+            font-size: 0.8rem;
+            color: red;
+        }
+        .alert-container {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+            width: 100%;
+            max-width: 400px;
+            text-align: center;
+        }
+        .alert {
+            margin-bottom: 10px;
+            border-radius: 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .alert-success, .alert-warning, .alert-danger, .alert-dark {
+            font-size: 0.9rem;
+        }
+    </style>
 </head>
 <body>
     <video autoplay muted loop playsinline
@@ -183,6 +184,10 @@
             <strong>Server Error!</strong> Something went wrong. Please try again later.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
+        <div class="alert alert-info alert-dismissible fade d-none" id="verifyEmailAlert" role="alert">
+            <strong>Please Verify Your Email!</strong> Check your inbox to verify your account.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -233,17 +238,17 @@
         }, 300));
 
         function showAlert(alertId) {
-            const alerts = ['successAlert', 'wrongCredentialsAlert', 'userNotFoundAlert', 'serverErrorAlert'];
+            const alerts = ['successAlert', 'wrongCredentialsAlert', 'userNotFoundAlert', 'serverErrorAlert', 'verifyEmailAlert'];
             alerts.forEach(id => {
                 const alert = document.getElementById(id);
-                if (alert) { // Only manipulate if element exists
+                if (alert) {
                     alert.classList.add('d-none');
                     alert.classList.remove('show');
                 }
             });
 
             const targetAlert = document.getElementById(alertId);
-            if (targetAlert) { // Only manipulate if element exists
+            if (targetAlert) {
                 targetAlert.classList.remove('d-none');
                 targetAlert.classList.add('show');
                 setTimeout(() => {
@@ -319,14 +324,22 @@
                 .then(function (response) {
                     console.log('Login successful:', {
                         token: response.data.token,
-                        needs_privacy_policy: response.data.needs_privacy_policy
+                        needs_privacy_policy: response.data.needs_privacy_policy,
+                        is_verified: response.data.is_verified
                     });
-                    localStorage.setItem("token", response.data.token);
-                    localStorage.setItem("redirectAfterPrivacy", "../dashboard/index.html"); // Store redirect URL
+                    // Save to sessionStorage
+                    sessionStorage.setItem("token", response.data.token);
+                    sessionStorage.setItem("username", username);
+                    sessionStorage.setItem("email", username); // Username is the email
+                    sessionStorage.setItem("is_verified", response.data.is_verified);
+                    sessionStorage.setItem("redirectAfterPrivacy", "../dashboard/index.html");
                     showAlert('successAlert');
                     setTimeout(() => {
                         if (response.data.needs_privacy_policy) {
                             window.location.href = "privacy.html";
+                        } else if (!response.data.is_verified) {
+                            showAlert('verifyEmailAlert');
+                            window.location.href = "verify-email.html";
                         } else {
                             window.location.href = "../dashboard/index.html";
                         }
